--- a/index.html
+++ b/index.html
@@ -1,114 +1,39 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
+
 <head>
+
     <meta charset="UTF-8">
-    <title>Signalement d'un incident</title>
-    <link href="ressource/css/bootstrap.css" rel="stylesheet">
-    <link href="ressource/Test.css" rel="stylesheet">
-    <link href="ressource/css/bootstrap-theme.css" rel="stylesheet">
+
+    <title>CodePen - Random Login Form</title>
+    <link href="ressource/style.css" rel="stylesheet">
+    <style>
+        @import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);
+        @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
+    </style>
 </head>
+
 <body>
-<h1 id="headerTitle">Super Formulaire</h1>
-<!--
-<form class="container" Action="Form-Processing.php" METHOD="POST" enctype="multipart/form-data">
--->
-<form name="formulaire" class="container" Action="Form-Processing.php" METHOD="POST" onsubmit="return validerFormulaire(this)">
 
-    <div>
-        <div class="form-group">
-            <label for="nomInput">Nom</label>
-            <input type="text" class="form-control form-horizontal" id="nomInput" name="nom" placeholder="Nom" data-toggle="tooltip" data-placement="right" title="Tooltip on right">
-        </div>
-        <div class="form-group">
-            <label for="prenomInput">Prénom</label>
-            <input type="text" class="form-control form-horizontal" id="prenomInput" name="prenom" placeholder="Prénom" data-toggle="tooltip" data-placement="right" title="Tooltip on right" oninput="checkNull(this)">
-        </div>
-        <div class="form-group">
-            <label for="emailInput">Email</label>
-            <input type="email" class="form-control" id="emailInput" name="email" placeholder="Email">
-        </div>
+<div class="body"></div>
+<div class="grad"></div>
+<div class="header">
+    <div>AUTHENTIFICATION</div>
+    <br/>
+    <span>MAIRIE</span>
+</div>
+<br>
 
-        <div class="form-group">
-            <label for="numeroInput">Numéro</label>
-            <input type="tel" class="form-control" id="numeroInput" name="numero" placeholder="Numéro">
-        </div>
-
+<form action="form.html" method="post">
+    <div class="login">
+        <input type="text" placeholder="login" name="user"><br>
+        <input type="password" placeholder="mot de passe" name="password"><br>
+        <input type="submit" value="Se connecter">
     </div>
-
-    <div id="section2">
-
-        <div class="form-group">
-            <label for="nomInput">Description</label>
-            <textarea type="text" class="form-control form-horizontal" id="descriptionInput"
-                   placeholder="Entrez votre description" name="description"></textarea>
-        </div>
-
-        <div class="form-group">
-            <label for="typeInput">Type d'incident</label>
-            <select class="form-control" id="typeInput" name="typeIncident">
-                <option>Lampadaire</option>
-                <option>Crotte de chien</option>
-                <option>Menace terroriste</option>
-                <option>Bonnasse dans les parages</option>
-                <option>Ca sent le shit</option>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label for="adresseInput">Adresse</label>
-            <input type="text" class="form-control form-horizontal" id="adresseInput"
-                   placeholder="Numéro, voie, Ville, Code postal" name="adresse">
-        </div>
-        <div class="form-group">
-            <label for="severiteInput">Sévérité</label>
-
-            <div class="radio" id="severiteInput">
-                <label>
-                    <input type="radio" name="optionsRadios"  value="Urgent" checked>
-                    Urgent
-                </label>
-            </div>
-            <div class="radio">
-                <label>
-                    <input type="radio" name="optionsRadios"  value="Pas urgent">
-                    Pas urgent
-                </label>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="notifReferenceInput">Référence de notification</label>
-            <div class="checkbox" id="notifReferenceInput">
-                <label>
-                    <input type="checkbox" name="check_web"> Web
-                </label>
-
-                <label>
-                    <input type="checkbox" name="check_email"> Email
-                </label>
-
-                <label>
-                    <input type="checkbox" name="check_tel"> Tél
-                </label>
-
-
-            </div>
-        </div>
-
-
-    </div>
-
-
-    <div class="form-group">
-        <label for="photoInput">Photo de l'incident</label>
-        <input type="file" id="photoInput" name="photo">
-    </div>
-    <button type="submit" class="btn btn-default form-group">Soumettre</button>
 </form>
 
+<script src="ressource/prefixfree.min.js"></script>
 
-
-<script src="ressource/js/bootstrap.min.js"></script>
-<script src="ressource/Test.js"></script>
 </body>
+
 </html>
