--- a/form.html
+++ b/form.html
@@ -9,11 +9,8 @@
 </head>
 <body>
 <h1 id="headerTitle">Super Formulaire</h1>
-<!--
-<form class="container" Action="Form-Processing.php" METHOD="POST" enctype="multipart/form-data">
--->
 <!-- test.php -->
-<form name="formulaire" class="container" Action="Form-Processing.php" METHOD="POST" enctype="multipart/form-data"> <!-- onsubmit="return validerFormulaire(this)"-->
+<form name="formulaire" class="container" Action="Form-Processing.php" METHOD="POST" enctype="multipart/form-data" onsubmit="return validerFormulaire(this.form)">  <!-- -->
 
     <div>
         <div class="form-group">
